<resources>

    <string name="app_name">FAruba</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="edit_message">Enter a message</string>
    <string name="save">Save</string>
    <string name="connection_info">Connection Information</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_preferences">Preferences</string>

    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_user_name">Username</string>
    <string name="pref_user_name_summary">Set your username</string>
    <string name="pref_password">Password</string>
    <string name="pref_password_summary">Set your password</string>
     
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>

    <string name="logged_in">Already logged in.</string>
    <string name="update">Update</string>

</resources>