<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">


    <LinearLayout style="@style/InputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/InputHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_user_name" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/pref_user_name_summary" />

    </LinearLayout>

    <LinearLayout style="@style/InputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/InputHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:password="true"
            android:singleLine="true" />

    </LinearLayout>

    <Button
        android:id="@+id/update"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/update"/>

    <LinearLayout style="@style/InputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/InputHelp"
            android:id="@+id/info_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connection_info"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        
        <TextView
            android:id="@+id/response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
